add_subdirectory(filters filters)

set(PX4LIB_LIB_SOURCES
    ${PX4LIB_LIB_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix1F1.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix1F1.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3F3.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix3F3.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix1F3.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix1F3.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix3F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix4F4.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix4F4.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix6F6.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix6F6.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix6F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix6F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix10F3.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix10F3.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix3F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix3F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix6F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix6F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix10F6.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix10F6.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix6F1.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix6F1.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix10F1.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix10F1.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix1F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix1F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix10F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix10F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix1F6.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix1F6.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector1F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector1F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector2F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector2F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector3F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector3F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector4F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector4F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector6F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector6F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector10F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Vector10F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Quaternion.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Quaternion.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Derivative.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Derivative.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Integrator.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Integrator.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Limits.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Limits.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Expo.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Expo.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LowPass.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/LowPass.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/HighPass.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/HighPass.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LowPassVector10F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/LowPassVector10F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Stats1F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Stats1F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Stats2F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Stats2F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Stats6F.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Stats6F.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Euler.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Euler.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Dcm.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Dcm.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlockDelay.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/BlockDelay.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix2F2.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix2F2.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix2F10.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix2F10.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix10F2.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix10F2.hpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Matrix1F2.cpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Matrix1F2.hpp
    ${PX4LIB_PUBLIC_INCLUDE_DIR}/math/Functions.hpp
)
    
set(PX4LIB_LIB_SOURCES  ${PX4LIB_LIB_SOURCES} PARENT_SCOPE)
set(PX4LIB_INCLUDES ${PX4LIB_INCLUDES} PARENT_SCOPE)
